# orderflow

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md
.github/actions/setup-rust/: action.yml
.github/workflows/: build-python-binary-wheels.yml  ci.yml  publish-java.yml  publish-python.yml  publish-rust.yml  release-native-artifacts.yml
bindings/: versions.toml
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/com/orderflow/bindings/: BookAction.java  DataQualityFlags.java  EngineConfig.java  EventListener.java  OfBook.java  OfEngineConfig.java  OfEvent.java  OfEventCallback.java  OfExternalFeedPolicy.java  OfSymbol.java  OfTrade.java  OrderflowArgException.java  OrderflowEngine.java  OrderflowEvent.java  OrderflowException.java  OrderflowNative.java  OrderflowStateException.java  Side.java  StreamKind.java  Symbol.java  package-info.java
bindings/java/src/main/java/com/orderflow/examples/: BasicExample.java  BindingSmokeExample.java  ExternalIngestExample.java  HealthExample.java  package-info.java
bindings/java/src/main/javadoc/: overview.html
bindings/python/: README.md  pyproject.toml
bindings/python/examples/: basic.py  external_ingest.py  health_example.py
bindings/python/orderflow/: __init__.py  _ffi.py  api.py
bindings/python/tests/: test_subscribe_null_callback.py
crates/of_adapters/: Cargo.toml  README.md
crates/of_adapters/src/: binance.rs  lib.rs  rithmic.rs
crates/of_adapters/src/cqg/: book.rs  config.rs  mapper.rs  metrics.rs  mod.rs  proto.rs  session.rs  transport.rs
crates/of_core/: Cargo.toml  README.md
crates/of_core/src/: lib.rs
crates/of_ffi_c/: Cargo.toml  README.md
crates/of_ffi_c/include/: orderflow.h
crates/of_ffi_c/src/: lib.rs  support.rs  tests.rs
crates/of_persist/: Cargo.toml  README.md
crates/of_persist/src/: lib.rs
crates/of_runtime/: Cargo.toml  README.md
crates/of_runtime/src/: config.rs  engine.rs  lib.rs  tests.rs
crates/of_signals/: Cargo.toml  README.md
crates/of_signals/src/: lib.rs
dashboard/: README.md  server.py
dashboard/static/: index.html
docs/: README.md
docs/api/: README.md  provider_config.md
docs/bindings/: README.md  c.md  java.md  python.md  rust.md
docs/handbook/: 01-orderflow-primer.md  02-strategy-design.md  03-trade-workflow.md  04-architecture.md  05-api-reference.md  05a-of-core-reference.md  05b-of-adapters-reference.md  05c-of-signals-reference.md  05d-of-persist-reference.md  05e-of-runtime-reference.md  05f-of-ffi-c-reference.md  06-contributor-guide.md  07-references.md  README.md
docs/handbook/assets/diagrams/src/: 01-orderflow-primer-01.mmd  02-strategy-design-01.mmd  03-trade-workflow-01.mmd  04-architecture-01.mmd  04-architecture-02.mmd  04-architecture-03.mmd  04-architecture-04.mmd
docs/ops/: README.md  performance.md  provider_certification.md  real_data_test.md  release-0.2.0.md  release-0.3.0.md  release_checklist.md  stabilization_checklist.md
docs/ops/examples/: .env.example  binance_conformance.toml  binance_live.toml  cqg_conformance_mock.toml  rithmic_conformance_mock.toml
docs/security/: README.md
examples/c/: basic.c
examples/perf_harness/: Cargo.toml
examples/perf_harness/src/: main.rs
examples/replay_cli/: Cargo.toml
examples/replay_cli/src/: main.rs
packaging/vcpkg/official/: README.md
packaging/vcpkg/registry/: README.md  vcpkg-configuration.example.json  vcpkg-configuration.git-example.json
packaging/vcpkg/registry/versions/: baseline.json
packaging/vcpkg/registry/versions/o-/: orderflow-c.json
tools/: analyze_captured_data.py  capture_public_market_data.py  check_ffi_exports.sh  dashboard_smoke_test.py  docs_coverage.py  provider_conformance.py  smoke_python_binding.py
tools/release/: sync_binding_versions.py  sync_vcpkg_registry_baseline.py
