[workspace]
members = [
  "crates/of_core",
  "crates/of_adapters",
  "crates/of_signals",
  "crates/of_persist",
  "crates/of_runtime",
  "crates/of_ffi_c",
  "examples/replay_cli", "examples/perf_harness",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gregorian Rayne <gregorianrayne09@gmail.com>"]
repository = "https://github.com/gregorian-09/orderflow"
homepage = "https://github.com/gregorian-09/orderflow"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
