[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orderflow-gregorian09"
version = "0.1.1"
description = "Python ctypes binding for the Orderflow C API"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Gregorian Rayne", email = "gregorianrayne09@gmail.com" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["orderflow*"]
