[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orderflow-gregorian09"
version = "0.1.4"
description = "Python ctypes binding for the Orderflow C API"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [{ name = "Gregorian Rayne", email = "gregorianrayne09@gmail.com" }]
keywords = ["orderflow", "market-microstructure", "trading", "ffi", "ctypes"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/gregorian-09/orderflow"
Documentation = "https://github.com/gregorian-09/orderflow/tree/main/docs"
Repository = "https://github.com/gregorian-09/orderflow"
Issues = "https://github.com/gregorian-09/orderflow/issues"
Changelog = "https://github.com/gregorian-09/orderflow/blob/main/CHANGELOG.md"
API = "https://github.com/gregorian-09/orderflow/tree/main/docs/api"
Handbook = "https://github.com/gregorian-09/orderflow/tree/main/docs/handbook"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["orderflow*"]
