[package]
name = "of_adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Provider adapters and market-data abstraction for the Orderflow engine"
readme = "../../README.md"

[features]
default = []
rithmic = []
cqg = []
cqg_proto = ["cqg"]
binance = []

[dependencies]
of_core = { path = "../of_core", version = "0.1.0" }
