[package]
name = "of_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core domain models and analytics primitives for the Orderflow engine"
readme = "README.md"
documentation = "https://docs.rs/of_core"
keywords = ["orderflow", "market-data", "trading", "analytics", "finance"]
categories = ["finance", "algorithms"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
