[package]
name = "of_ffi_c"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C ABI facade for the Orderflow runtime"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
rithmic = ["of_adapters/rithmic"]
cqg = ["of_adapters/cqg"]
cqg_proto = ["of_adapters/cqg_proto"]
binance = ["of_adapters/binance"]

[dependencies]
of_core = { path = "../of_core", version = "0.1.0" }
of_runtime = { path = "../of_runtime", version = "0.1.0" }
of_adapters = { path = "../of_adapters", version = "0.1.0" }
of_signals = { path = "../of_signals", version = "0.1.0" }
