[package]
name = "of_ffi_c"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "C ABI facade for the Orderflow runtime"
readme = "README.md"
documentation = "https://docs.rs/of_ffi_c"
keywords = ["orderflow", "ffi", "market-data", "trading", "finance"]
categories = ["finance", "api-bindings"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
rithmic = ["of_adapters/rithmic"]
cqg = ["of_adapters/cqg"]
cqg_proto = ["of_adapters/cqg_proto"]
binance = ["of_adapters/binance"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
of_core = { path = "../of_core", version = "0.2.0" }
of_runtime = { path = "../of_runtime", version = "0.2.0" }
of_adapters = { path = "../of_adapters", version = "0.2.0" }
of_signals = { path = "../of_signals", version = "0.2.0" }
