[package]
name = "of_persist"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Persistence and retention utilities for Orderflow normalized data"
readme = "README.md"
documentation = "https://docs.rs/of_persist"

[package.metadata.docs.rs]
all-features = true

[dependencies]
of_core = { path = "../of_core", version = "0.1.2" }
