[package]
name = "of_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime orchestration and health supervision for the Orderflow engine"
readme = "../../README.md"

[dependencies]
of_adapters = { path = "../of_adapters", version = "0.1.0" }
of_core = { path = "../of_core", version = "0.1.0" }
of_persist = { path = "../of_persist", version = "0.1.0" }
of_signals = { path = "../of_signals", version = "0.1.0" }
