[package]
name = "of_signals"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Signal modules and gating policy for the Orderflow engine"
readme = "../../README.md"
documentation = "https://docs.rs/of_signals"

[package.metadata.docs.rs]
all-features = true

[dependencies]
of_core = { path = "../of_core", version = "0.1.1" }
