[package]
name = "replay_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
of_adapters = { path = "../../crates/of_adapters" }
of_core = { path = "../../crates/of_core" }
of_runtime = { path = "../../crates/of_runtime" }
of_signals = { path = "../../crates/of_signals" }
